[package]
name = "aalib-sys"
version = "0.1.0"
authors = ["rockerBOO <rockerboo@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependancies]
cc = { version = "1.0", features = ["parallel"] } 
pkg-config = "0.3"
